<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">don\'t have an account</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="home">home</string>
    <string name="add_post">Add Post</string>
    <string name="profile">profile</string>
    <string name="account">account</string>
    <string name="update">update</string>
    <string name="email">Email</string>
    <string name="description">Description</string>
    <string name="your_description">Your Description:</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="joined">Joined</string>
</resources>